js262/test/built-ins/Error/prototype/name/prop-desc.js


/*---
esid: sec-error.prototype.name
description: Property descriptor of Error.prototype.name
includes: [propertyHelper.js]
---*/

verifyProperty(Error.prototype, 'name', {
  enumerable: false,
  writable: true,
  configurable: true,
  value: 'Error'
});
